# utter-react-native

./: README.md
nest-js-server/: .gitignore  package.json
nest-js-server/src/: main.ts
server/: .env.example  .gitignore  app.py  package.json  pyproject.toml
server/api/: message_routes.py
server/flaskapp/: app.py  routes.py
server/flaskapp/api/: message_routes.py
server/flaskapp/services/: chat_generation_service.py  message_history_service.py  transcription_service.py
server/flaskapp/utils/: websocket_util.py
server/services/: chat_generation_service.py  speech_synthesis_service.py  transcription_service.py
server/src/: app.module.ts  main.ts
server/src/audio/: audio.controller.ts  audio.module.ts  audio.service.ts
server/src/chat-model/: chat-model.controller.ts  chat-model.module.ts  chat-model.service.ts
server/src/message-history/: message-history.controller.ts  message-history.gateway.ts  message-history.module.ts  message-history.service.ts
server/src/speech-synthesis/: speech-synthesis.controller.ts  speech-synthesis.module.ts  speech-synthesis.service.ts
server/src/transcription/: transcription.controller.ts  transcription.module.ts  transcription.service.ts
server/uploads/: audiofile.3gp  audiofile.caf
server/uploads/audio/: audiofile.caf
server/utils/: openai.py  polly_util.py  whisper_util.py
utter-app/: .gitignore  App.js  App.tsx  app.json  context-opts.ios.ts  metro.config.js  navigationStack.js  package-lock.json  package.json
utter-app/Views/: ChatOrCallDirect.js  ContentView.js
utter-app/android/: settings.gradle
(+72 files in other folders)
