[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for utter language learning app"
authors = ["Hugo and Victor"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
