[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend server for utter language learning app"
authors = ["Hugo and Victor"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
openai = "^1.8.0"
python-dotenv = "^1.0.0"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
